--- a/market-org/src/components/createmarket/CreateMarket.css
+++ b/market-org/src/components/createmarket/CreateMarket.css
@@ -34,17 +34,17 @@
     width:50%;
 }
 
-.submit-button-vendor{
+.button-market-register{
     color: #ffffff !important;
     background-color: rgba(180, 45, 90, 0.911) !important;
-    font-size:30px !important;
+    font-size:18px !important;
     border-radius: 25px !important;
-    padding: 5px !important;
+    padding: 3px !important;
     font-family: 'Montserrat' !important;
     
 }
 
-.submit-button-vendor:hover{
+.button-market-register:hover{
     background-color: white !important;
     color: rgba(180, 45, 90) !important;
 }
@@ -54,15 +54,15 @@
     width: 100%; 
 }
 
-.vendor-form h1{
+/* .vendor-form h1{
     font-size:50px;
     color:white;
     font-family: 'Montserrat'
-}
+} */
 
 .market-form-right h2{
     font-size:30px;
-    color:rgba(180, 45, 90);
+    color:rgba(180, 45, 90) !important;
     font-family: 'Montserrat';
     
 }
