--- a/market-org/src/components/marketLandingPage/marketLandingPage.css
+++ b/market-org/src/components/marketLandingPage/marketLandingPage.css
@@ -20,15 +20,19 @@
     display:flex;
     flex-wrap: wrap;
     justify-content: center;
+    background-color: white;
+    margin: 10px;
+    border-radius: 10px;
+    border: 1px dotted rgba(180, 45, 90, 0.911);
 }
 
 .market-card{
-    background-color: white;
+    /* background-color: white; */
     font-family: 'Montserrat';
     font-size: 15px;
     margin:10px;
     width:23%;
-    border-radius: 10px;
+    
 }
 
 .market-info{
@@ -97,4 +101,3 @@
     }
     
 }
-
