--- a/market-org/src/components/login/SignIn.css
+++ b/market-org/src/components/login/SignIn.css
@@ -20,3 +20,79 @@
     align-items: center;
     padding:20px;
 }
+
+@import url('https://fonts.googleapis.com/css?family=Montserrat');
+
+.vendor-form-wrapper{
+    display: flex;
+    flex-wrap: wrap;
+    min-height: calc(100vh - 64px);    
+}
+
+.vendor-form-left{
+    background-image: url('../../images/market2.jpg');
+    background-position: center center;
+    box-shadow:inset 0 0 0 2000px rgba(105, 7, 40, 0.3);
+    background-size: cover; 
+    width:60%;
+    
+
+}
+
+.vendor-form-right{
+    background-color: white;
+    width:40%;
+    display:flex;
+    flex-wrap: wrap;
+    padding:20px;
+}
+
+
+.sign-in-right form{
+    width: 100%;
+    padding:15px;
+}
+
+
+
+.sign-in-button{
+    color: #ffffff !important;
+    background-color: rgba(180, 45, 90, 0.911) !important;
+    font-size:18px !important;
+    border-radius: 25px !important;
+    padding: 2px !important;
+    font-family: 'Montserrat' !important;
+    width: 50%;
+    margin-top:50px !important;
+    
+}
+
+.sign-in-button:hover{
+    background-color: white !important;
+    color: rgba(180, 45, 90) !important;
+}
+
+.input-field{
+    /* background-color: grey; */
+    width: 100%; 
+    margin-top:15px;
+    margin-bottom:15px;
+}
+
+
+.sign-in-right h2{
+    font-size:30px;
+    color:rgba(180, 45, 90);
+    font-family: 'Montserrat';
+    
+}
+
+@media (max-width: 1000px){
+    .sign-in-left{
+        display:none;
+    }
+    .sign-in-right{
+        width:100%;
+    }
+}
+
