--- a/market-org/src/components/register/SignUp.css
+++ b/market-org/src/components/register/SignUp.css
@@ -1,18 +1,20 @@
-.sign-in-wrapper{
+@import url('https://fonts.googleapis.com/css?family=Montserrat');
+
+.sign-up-wrapper{
     display: flex;
     flex-wrap: wrap;
     min-height: calc(100vh - 64px);
     
 }
 
-.sign-in-left{
+.sign-up-left{
     background-image: url('../../images/market2.jpg');
     background-position: center center;
     box-shadow:inset 0 0 0 2000px rgba(105, 7, 40, 0.3);
     background-size: cover; 
     width:60%;
 }
-.sign-in-right{
+.sign-up-right{
     background-color: white;
     width:40%;
     display:flex;
@@ -21,15 +23,15 @@
     padding:20px;
 }
 
-@import url('https://fonts.googleapis.com/css?family=Montserrat');
 
-.sign-in-right form{
+
+.sign-up-right form{
     width: 100%;
     padding:15px;
 }
 
 
-.sign-in-button{
+.sign-up-button{
     color: #ffffff !important;
     background-color: rgba(180, 45, 90, 0.911) !important;
     font-size:18px !important;
@@ -41,9 +43,20 @@
     
 }
 
-.sign-in-button:hover{
+.sign-up-button:hover{
     background-color: white !important;
     color: rgba(180, 45, 90) !important;
+}
+
+.account-type-button{
+    color: #ffffff !important;
+    background-color: rgba(180, 45, 90, 0.911) !important;
+    font-size:18px !important;
+    border-radius: 25px !important;
+    padding: 2px !important;
+    font-family: 'Montserrat' !important;
+    width: 100%;
+    margin-top:20px !important;   
 }
 
 .input-field{
@@ -66,10 +79,10 @@
 }
 
 @media (max-width: 1000px){
-    .sign-in-left{
+    .sign-up-left{
         display:none;
     }
-    .sign-in-right{
+    .sign-up-right{
         width:100%;
     }
 }
