--- a/market-org/src/components/register/SignUp.css
+++ b/market-org/src/components/register/SignUp.css
@@ -36,7 +36,7 @@
     background-color: rgba(180, 45, 90, 0.911) !important;
     font-size:18px !important;
     border-radius: 25px !important;
-    padding: 2px !important;
+    padding: 7px !important;
     font-family: 'Montserrat' !important;
     width: 100%;
     margin-top:20px !important;
@@ -55,7 +55,7 @@
     border-radius: 25px !important;
     padding: 2px !important;
     font-family: 'Montserrat' !important;
-    width: 100%;
+    width: 50%;
     margin-top:20px !important;   
 }
 
@@ -67,7 +67,7 @@
 }
 
 
-.sign-in-right h2{
+.sign-up-right h2{
     font-size:30px;
     color:rgba(180, 45, 90);
     font-family: 'Montserrat';
@@ -78,6 +78,12 @@
     margin-bottom: 30px !important;
 }
 
+.account-type-button-wrapper{
+    width: 45%;
+    display: flex;
+    justify-content: center;
+}
+
 @media (max-width: 1000px){
     .sign-up-left{
         display:none;
@@ -85,5 +91,13 @@
     .sign-up-right{
         width:100%;
     }
+}
+
+.account-type-header h4{
+    font-size: 20px;
+}
+.account-type-header{
+    text-align: center;
+    margin: 60px;
 }
 
