--- a/market-org/src/components/register/SignUp.css
+++ b/market-org/src/components/register/SignUp.css
@@ -8,7 +8,7 @@
 }
 
 .sign-up-left{
-    background-image: url('../../images/market2.jpg');
+    background-image: url('../../images/market-stand.jpg');
     background-position: center center;
     box-shadow:inset 0 0 0 2000px rgba(105, 7, 40, 0.3);
     background-size: cover; 
