--- a/market-org/src/components/navbar/navbar.css
+++ b/market-org/src/components/navbar/navbar.css
@@ -4,3 +4,28 @@
         border: 2px solid orange;
     }
 }
+
+@-webkit-keyframes slideInDown {
+    from {
+      -webkit-transform: translate3d(0, -100%, 0);
+      transform: translate3d(0, -100%, 0);
+      visibility: visible;
+    }
+  
+    to {
+      -webkit-transform: translate3d(0, 0, 0);
+      transform: translate3d(0, 0, 0);
+    }
+  }
+
+.nav-bar {
+    @media only screen and (max-width: 660px) {
+        animation:  slideInRight 1s ease-in-out forwards;
+        border: 1px solid orange;
+    }
+   
+}
+
+.checking {
+    color: #38212e75;
+}
