--- a/market-org/src/components/marketLandingPage/marketLandingPage.css
+++ b/market-org/src/components/marketLandingPage/marketLandingPage.css
@@ -1,74 +1,73 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat');
 
 
-.landing-page-wrapper{
-    display: flex; 
-    justify-content: center; 
-    align-items: center; 
-    flex-wrap: wrap; 
-    padding-top: 20px;
-    box-shadow:inset 0 0 0 2000px rgba(105, 7, 40, 0.3);
-    min-height: calc(100vh - 64px);   
-}
-.list-title{
-    display:flex;
+@import url('https://fonts.googleapis.com/css?family=Montserrat');
+
+
+
+
+.market-icon{
+    display: flex;
     justify-content: center;
-    width: 100%;
+    align-items: center;
+    background-color:#38212E;
+    width: 175px;
+    height: 175px;
+    border-radius: 150px;
+    margin-top: -190px;
+    margin-left: 30px;
+    margin-bottom: 50px;
+    border: 2px solid white;
 }
 
-.market-card-wrapper{
-    display:flex;
-    flex-wrap: wrap;
+.market-icon img{
+    width: 66%;
+    height: 66%;
+    
+}
+
+.market-card-right a{
+    display: flex;
     justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    color: white;
+    font-size:16px;
+    border-radius: 25px ;
+    font-family: 'Montserrat';
+    padding: 7px;
+    margin: 5px;
+    width: 45%;
+    background-color: rgba(180, 45, 90, 0.911);
+}
+.market-card-right a:hover{
     background-color: white;
-    margin: 10px;
-    border-radius: 10px;
-    border: 1px dotted rgba(180, 45, 90, 0.911);
+    color: rgba(180, 45, 90);
+}
+
+
+.market-landing-card-link:hover{
+    background-color: #38212F;
+    color: white;
+    
 }
 
 .market-card{
-    /* background-color: white; */
-    font-family: 'Montserrat';
-    font-size: 15px;
-    margin:10px;
-    width:23%;
-    
-}
-
-.market-info{
-    text-align: center;
-    width: 100%;
-    
-}
-
-.market-card-link{
-    
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    background-color: rgba(252, 186, 208, 0.911);
-    font-size:14px ;
-    border-radius: 25px ;
-    padding: 1px;
+    background-color: white;
     font-family: 'Montserrat';
-    font-family: 'Montserrat';
-    margin: 5px;
-    width:45%;   
+    font-size: 20px;
+    margin:10px;
+    width:100%;
+    border-radius: 10px;
     text-align: center;
+    box-shadow: 3px 3px 4px rgba(0, 0, 0, .5);
 }
 
-.market-card-link h4{
-    color: rgba(180, 45, 90, 0.911);  
-}
-
-.market-card-link a{
-    text-decoration: none;
-    color: rgba(255, 249, 251, 0.911);
-}
-
-.market-card-link:hover{
-    background-color: #D1FCAB;
-    color: white;
+.market-card-wrapper{
+    width: 100%;
     
 }
 
@@ -86,19 +85,59 @@
     font-size: 30px;
     margin-bottom:50px;
     text-shadow: 2px 2px #000000;
+    box-shadow: 3px 3px 4px rgba(0, 0, 0, .5);
   
 }
 
-@media (max-width: 1500px){
-    .market-card{
-        width: 40%;
-    }
+.market-landing-page-wrapper{
+    background-color: #E9EBEE;
+    padding-bottom: 50px;
+    padding-right: 20%;
+    padding-left: 20%;
+    
+}
+
+.market-left{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    width: 30%;
+}
+.market-left img{
+    object-fit: cover;
+    max-width: 100%;
+    max-height: 100%
+}
+.market-card-right{
+    width: 70%;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    align-items: bottom;
+}
+
+.market-card-right h2{
+    width: 100%;
+    margin: 0px;
+}
+.market-card-right h3{
+    width: 100%;
+    margin: 0px;
+}
+.market-card-right h4{
+    width: 45%;
+}
+
+
+
+
+@media (max-width: 1000px){
+    
     
 }
 
 @media (max-width: 875px){
-    .market-card{
-        width: 100%;
-    }
+    
     
 }
