--- a/market-org/src/components/marketLandingPage/marketLandingPage.css
+++ b/market-org/src/components/marketLandingPage/marketLandingPage.css
@@ -1,11 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat');
 
-
-@import url('https://fonts.googleapis.com/css?family=Montserrat');
-
-
-
-
 .market-icon{
     display: flex;
     justify-content: center;
@@ -56,20 +50,15 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    background-color: white;
     font-family: 'Montserrat';
     font-size: 20px;
-    margin:10px;
+    
     width:100%;
     border-radius: 10px;
     text-align: center;
     box-shadow: 3px 3px 4px rgba(0, 0, 0, .5);
 }
 
-.market-card-wrapper{
-    width: 100%;
-    
-}
 
 .market-list-page-header{
     display: flex;
@@ -96,6 +85,7 @@
     padding-left: 20%;
     
 }
+
 
 .market-left{
     display: flex;
@@ -127,6 +117,18 @@
 }
 .market-card-right h4{
     width: 45%;
+}
+
+.market-card-wrapped{
+display: flex;
+flex-wrap: wrap;
+justify-content: center;
+margin: 10px;
+background-color: white;
+}
+
+.market-card{
+    background: none;
 }
 
 
