--- a/market-org/src/components/navbar/navbar.css
+++ b/market-org/src/components/navbar/navbar.css
@@ -53,13 +53,36 @@
   color: white;
   display: flex;
   position: absolute;
-  top: 85px;
-  width: 100%;
+  top: 70px;
+  width: 99%;
   flex-direction: column;
-  margin: 0;
+  /* align-items: space-around;
+  justify-content: center; */
+  /* margin-right: 2rem; */
+  animation:  slideInUp 2s ease-in-out forwards;
+  z-index: 2;
+  /* background-color: #b42d5ae8; */
+  background-color: #b42d5afb;
+  height: 100vh;
   /* margin-top: 10rem; */
   border: 1px solid silver;
   /* border: 1px solid salmon; */
+}
+
+.links {
+  height: 50vh;
+  text-align: left;
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  align-self: space-between;
+  justify-content: space-between;
+  /* border: 1px solid white; */
+}
+
+.nav-link {
+  color: white;
+  text-decoration: none;
 }
 /* @media only screen and (max-width: 660px) {
   .mobile-nav {
