--- a/market-org/src/components/stalls/stallsList.css
+++ b/market-org/src/components/stalls/stallsList.css
@@ -1,77 +1,20 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat');
 
 
-.landing-page-wrapper{
-    display: flex; 
-    justify-content: center; 
-    align-items: center; 
-    flex-wrap: wrap; 
-    padding-top: 20px;
-    box-shadow:inset 0 0 0 2000px rgba(105, 7, 40, 0.3);
-    min-height: calc(100vh - 64px);   
-}
-.list-title{
-    display:flex;
-    justify-content: center;
-    width: 100%;
-}
-
-.market-card-wrapper{
-    display:flex;
-    flex-wrap: wrap;
-    justify-content: center;
-}
-
-.market-card{
-    background-color: white;
-    font-family: 'Montserrat';
-    font-size: 15px;
-    margin:10px;
-    width:23%;
-    border-radius: 10px;
-}
-
-.market-info{
-    text-align: center;
+.rent-page-wrapper{
+    background-color: #E9EBEE;
+    padding-bottom: 50px;
+    padding-right: 20%;
+    padding-left: 20%;
+    font-family: 'Montserrat'
     
 }
 
-.market-card-link{
-    
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    background-color: rgba(180, 45, 90, 0.911);
-    font-size:14px ;
-    border-radius: 25px ;
-    padding: 1px;
-    font-family: 'Montserrat';
-    border-radius: 25px ;
-    font-family: 'Montserrat';
-    margin:5px;
-    width:45%;  
-  
-}
 
-.market-card-link h4{
-    color:white;  
-}
-
-.market-card-link a{
-    text-decoration: none;
-}
-
-.market-card-link:hover{
-    background-color: black;
-    color: rgba(180, 45, 90);
-    
-}
-
-.stalls-list-page-header{
+.rent-page-header{
     display: flex;
     align-items: center;
     justify-content: center;
-    flex-direction: column;
     background-image: url('../../images/market4.jpg');
     background-position: center center;
     box-shadow:inset 0 0 0 2000px rgba(105, 7, 40, 0.3);
@@ -82,8 +25,95 @@
     font-size: 30px;
     margin-bottom:50px;
     text-shadow: 2px 2px #000000;
-
-
+    box-shadow: 3px 3px 4px rgba(0, 0, 0, .5);
+  
+}
+.rent-icon{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color:#38212E;
+    width: 175px;
+    height: 175px;
+    border-radius: 150px;
+    margin-top: -190px;
+    margin-left: 30px;
+    margin-bottom: 50px;
+    border: 2px solid white;
+}
+.rent-icon img{
+    width: 66%;
+    height: 66%;
     
 }
+
+.stall-wrapper{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.rent-market-info{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    width: 28%;
+    background-color: white;
+    color: rgba(180, 45, 90);
+    margin:10px;
+    box-shadow: 3px 3px 4px rgba(0, 0, 0, .5);
+    border-radius: 10px;
+    padding: 20px;
+}
+.rent-market-info h3, h4{
+    width: 100%;
+    
+}
+
+.stalls{
+    width: 68%;
+    margin:10px;
+    display: flex;
+    flex-wrap: wrap;
+    background-color: white;
+    box-shadow: 3px 3px 4px rgba(0, 0, 0, .5);
+    border-radius: 10px;
+    padding: 20px;
+}
+.stalls h2{
+    width: 100%;
+}
+
+.stall{
+    width: 30%;
+    border: 1px dotted #38212F;
+    margin: 3px;
+    border-radius: 10px;
+}
+ .stall h3, p{
+     margin: 10px;
+ }
+
+
+.rent-add-button{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white !important;
+    font-size:16px;
+    border-radius: 25px !important;
+    font-family: 'Montserrat';
+    padding: 7px;
+    width: 80%;
+    background-color: rgba(180, 45, 90, 0.911) !important;
+    margin: 5px !important;
+    
+}
+
+.rent-add-button:hover{
+    background-color: white !important;
+    color: rgba(180, 45, 90) !important;
+}
+
+
 
