finished with the styling for slide up and profile dropdown menu

--- a/market-org/src/components/navbar/navbar.css
+++ b/market-org/src/components/navbar/navbar.css
@@ -65,7 +65,7 @@
   background-color: #b42d5afb;
   height: 100vh;
   /* margin-top: 10rem; */
-  border: 1px solid silver;
+  /* border: 1px solid silver; */
   /* border: 1px solid salmon; */
 }
 
