--- a/market-org/src/components/marketLandingPage/marketLandingPage.css
+++ b/market-org/src/components/marketLandingPage/marketLandingPage.css
@@ -134,12 +134,53 @@ background-color: white;
 
 
 
-@media (max-width: 1000px){
-    
+@media (max-width: 1300px){
+    .market-landing-page-wrapper{
+        padding: 0%;
+    }
     
 }
 
-@media (max-width: 875px){
+@media (max-width: 800px){
     
+    .market-left{
+       width: 100%; 
+       margin-top: 20px;
+    }
+
+    .market-left img{
+        width: 200px;
+        height: 200px;
+        border-radius: 150px;
+    }
+    .market-card-right h4{
+        width: 100%;
+        margin: 5px !important;
+    }
+    .market-card-right a{
+        width: 80%;
+        margin-top: 25px;
+    }
+    .market-card-wrapped{
+        padding: 20px;
+        margin: 20px;
+        border-radius: 10px;
+    }
+    .market-icon {
+        display: flex;
+        justify-content: center;
+        width: 60%;
+        height: 100%;
+        margin: 0px;
+        padding: 5px;
+        margin-top: -100px;
+        margin-left: 20%;
+        margin-right: 20%;
+        
+    }
+    .market-icon img{
+        height: 90px;
+        width: 90px;
+    }
     
 }
