--- a/market-org/src/components/stalls/stallsList.css
+++ b/market-org/src/components/stalls/stallsList.css
@@ -27,8 +27,13 @@
     margin-bottom:50px;
     text-shadow: 2px 2px #000000;
     box-shadow: 3px 3px 4px rgba(0, 0, 0, .5);
+    text-align: center;
   
 }
+
+
+
+
 .rent-icon{
     display: flex;
     justify-content: center;
@@ -51,6 +56,7 @@
 .stall-wrapper{
     display: flex;
     flex-wrap: wrap;
+    width: 100%;
 }
 
 .rent-market-info{
@@ -66,13 +72,16 @@
     border-radius: 10px;
     padding: 20px;
 }
-.rent-market-info h3, h4{
+.rent-market-info h3, h4, h2{
     width: 100%;
     
 }
+.rent-market-info h3{
+    margin-top: 25px;
+}
 
 .stalls{
-    width: 68%;
+    width: 67%;
     margin:10px;
     display: flex;
     flex-wrap: wrap;
@@ -114,6 +123,51 @@
 .rent-add-button:hover{
     background-color: white !important;
     color: rgba(180, 45, 90) !important;
+}
+@media (max-width: 1500px){
+    .rent-page-wrapper{
+        padding: 0%;
+    }
+  
+}
+@media (max-width: 1000px){
+    .rent-market-info{
+        width: 100%;
+    }
+    .rent-market-info h4{
+        width: 25%;
+        margin: 0px;
+    }
+    .stalls {
+        width: 100%;
+
+    }
+  
+}
+
+@media (max-width: 800px){
+    
+   
+    .rent-icon {
+        display: flex;
+        justify-content: center;
+        width: 60%;
+        height: 100%;
+        margin: 0px;
+        padding: 5px;
+        margin-top: -100px;
+        margin-bottom: 50px;
+        margin-left: 20%;
+        margin-right: 20%;
+        
+    }
+    .rent-icon img{
+        height: 90px;
+        width: 90px;
+    }
+    .stall{
+        width: 45%;
+    }
 }
 
 
