--- a/market-org/src/components/marketLandingPage/vendorsPerMarket.css
+++ b/market-org/src/components/marketLandingPage/vendorsPerMarket.css
@@ -35,6 +35,7 @@
     margin-bottom:50px;
     text-shadow: 2px 2px #000000;
     box-shadow: 3px 3px 4px rgba(0, 0, 0, .5);
+    text-align: center;
   
 }
 
