--- a/market-org/src/components/marketLandingPage/vendorsPerMarket.css
+++ b/market-org/src/components/marketLandingPage/vendorsPerMarket.css
@@ -124,17 +124,58 @@
     font-size: 32px;
 }
 
-.
 
 
 
 
-@media (max-width: 1000px){
-    
-    
+
+@media (max-width: 1500px){
+    .market-profile-page-wrapper{
+        padding: 0%;
+    }
+  
 }
-
-@media (max-width: 875px){
+@media (max-width: 800px){
     
+   
+    .market-icon {
+        display: flex;
+        justify-content: center;
+        width: 60%;
+        height: 100%;
+        margin: 0px;
+        padding: 5px;
+        margin-top: -100px;
+        margin-bottom: 50px;
+        margin-left: 20%;
+        margin-right: 20%;
+        
+    }
+    .market-icon img{
+        height: 90px;
+        width: 90px;
+    }
+}
+@media (max-width: 1100px){
+    .market-vendorpage-left{
+        width: 100%;
+        justify-content: left;
+    }
+    .market-vendorpage-left p{
+        width: 20%;
+    }
+    .market-vendorpage-left img{
+        
+        max-height: 75px;
+        max-width: 75px;
+        
+    }
+    .market-vendorpage-right{
+        width: 100%;
+    }
+    .market-vendorpage-left a{
+        margin-bottom: 20px;
+    }
     
+  
 }
