--- a/market-org/src/components/homepage/Homepage.css
+++ b/market-org/src/components/homepage/Homepage.css
@@ -193,11 +193,11 @@
 }
 
 .row-stagger-wrapper-left{
-    background-color:  pink;
+    background-color:  #E9EBEE;
     display: flex; 
     flex-wrap: wrap;
     width: 100%;
-    box-shadow:inset 0 0 0 2000px rgba(105, 7, 40, 0.3);
+   
     
 }
 
@@ -255,7 +255,7 @@
     justify-content: center;
     width: 100%;
     flex-wrap: wrap;
-    background-color: pink;
+    background-color: #E9EBEE;
     padding: 50px;
     
 }
@@ -317,8 +317,9 @@
     display: flex;
     flex-wrap: wrap;
     padding: 50px;
-    background-color: #38212E;
-    color: white;
+    background-color: #E9EBEE;
+    color: black;
+    text-align: center;
     
 }
 
